
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* getmsg (char*) ;
 int putserv (char*,char*) ;
 scalar_t__ strncmp (char*,char*,int) ;

int
rmd (char *name)
{
        char *line;

        putserv ("RMD %s\n", name);
        line = getmsg ("250 ");

        if (strncmp("250 ", line, 4) == 0)
                return (0);

        return (1);
}
